Fix z-indexes

--- a/resources/assets/sass/_overlay.scss
+++ b/resources/assets/sass/_overlay.scss
@@ -9,7 +9,7 @@
 	opacity: 0;
 	backface-visibility: hidden;
 	transition: opacity .3s 0s, visibility 0s .3s;
-	z-index: 3;
+	z-index: $zindex-modal-backdrop;
 }
 
 #cd-main-overlay.is-visible,
