--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -44,3 +44,5 @@ $dark:          $gray-800;
 
 $body-bg:                   $gray-100;
 $body-color:                $black;
+
+$zindex-zijbalk: 800;
