--- a/resources/assets/sass/_zijbalk.scss
+++ b/resources/assets/sass/_zijbalk.scss
@@ -7,7 +7,7 @@
 	width: 179px;
 	padding: 0 5px 40px 5px;
 	background-color: #f5f5f5;
-	z-index: 2;
+	z-index: $zindex-zijbalk;
 
 	.cd-beeldmerk {
 		height: 200px;
